# NAPL

./: CMakeLists.txt  README.md  midi_parser.ncb  midi_parser.sln
.github/workflows/: cmake-multi-platform.yml
Applications/RythmBuilder/: Instrument.cpp  Instrument.h  RythmBuilder.cpp  RythmBuilder.sln  RythmBuilder.vcproj  RythmBuilder.vcproj.old  RythmParser.cpp  RythmTextGrammar.hpp  guinees.aif  guinees.txt  instrument_factory.cpp  instrument_factory.h  kakilambe.aif  kakilambe.txt  stdafx.h  track_builder.cpp  track_builder.h
Applications/TestPrologic/: ReadMe.txt  StdAfx.cpp  StdAfx.h  TestPrologic.cpp  TestPrologic.dsp  TestPrologic.dsw  mssccprj.scc
Applications/napl_builder/: ReadMe.txt  napl_builder.cpp  napl_builder.sln  napl_builder.vcproj  napl_builder.vsd  napl_builder1.rc  platform.cpp  platform.h  resource.h  stdafx.cpp  stdafx.h
Applications/syncwav/: StdAfx.h  syncwav.cpp  syncwav.vcproj
Applications/truncator/: Truncator.cpp  Truncator.vcproj
Applications/utilities/: Truncator.cpp  cut.cpp  utilities.sln
Displays/: Displays.dsw  Displays.h  DisplaysDlg.cpp  StdAfx.cpp  StdAfx.h  WaveDisplay.cpp  WaveDisplay.h  WaveFormat.h  WaveView.cpp  resource.h
Include/: Filetype.h  Resample.h  Samplebl.h  architec.h  config_linux.h  general_resampler.h  memory_producer.h  memory_writer.h  ms_config.h  napl.h  napl_facade.h  nil_sink.h  objfact.h  processor_visitor.h  progress.h  reinterpret.h  sample_analyzer.h  simpops.h  truncator.h
Libs/Napl/: Aiff.h  Delay.h  Filefact.cpp  IEEE754.cpp  Napl.vcproj  Readme.txt  Resample.h  Samplety.h  Smputils.h  StdAfx.h  Wav.h  (+23 more)
MidiParse/: MidiParse.dsp  MidiParse.dsw  midifile.h  playmidi.cpp
Synth/: MidiMessages.cpp  MidiScanner.h  MidiScannerImp.h  Synth.dsw  test.cpp
applications/: CMakeLists.txt
applications/napl_builder/: napl_builder.cpp  napl_builder.rc  napl_builder.sln  napl_builder.vcproj  platform.h  resource1.h  stdafx.h
applications/napl_builder/package/: add.ns  add_doubles.ns  analyze.ns  array.ns  copy.ns  file_unlock.ns  func2.ns  function.ns  modulator.ns  normalize.ns  quicktest.bat  reinterpret.ns  test_memory_leak.ns  test_quad.bat  transform.ns  truncate.ns  vincetest.ns  write_speed.ns
applications/napl_builder/package/includes/: show_info.inc  test_includes.inc
applications/napl_builder/quickdoc/: make.bat
applications/rythmbuilder/: CMakeLists.txt  instrument.cpp  instrument.h  instrument_factory.cpp  instrument_factory.h  note_table.h  rythmbuilder.cpp  rythmbuilder.sln  rythmbuilder.sln.old  rythmbuilder.vcproj  rythmbuilder_old.cpp  rythmparser.cpp  rythmparser.h  rythmtextgrammar.hpp  stdafx.cpp  stdafx.h  track_builder.cpp  track_builder.h
applications/syncwav/: mssccprj.scc  readme.txt  stdafx.cpp  syncwav.dsp  syncwav.dsw  syncwav.sln  vssver.scc
applications/syncy/: midi.cpp  syncy.sln
applications/syncy/syncy/: ReadMe.txt  directsound_player.hpp  lcd_player.hpp  lrc_parser.cpp  lrc_parser.hpp  lyrics.hpp  midi.cpp  midi.hpp  midi_player.cpp  midi_player.hpp  mpg_file.cpp  mpg_file.hpp  stdafx.cpp  stdafx.h  syncy.cpp  syncy.vcproj  text_player.hpp  windows_midi.cpp
applications/testprologic/: vssver.scc
applications/truncator/: readme.txt  truncator.sln
applications/utilities/: cut.vcproj
dannylib/: map_keys.hpp
displays/: Displays.dsp  Displays.rc  ReadMe.txt  WaveView.h  displays.cpp  displaysdlg.h
fft_test/: ReadMe.txt  StdAfx.cpp  fft_test.cpp  fft_test.dsp  fft_test.dsw  fixedpoint.h  mycomplex.h  powers.h  stdafx.h
include/: config.h  config_old.h  debugprint.h  filefact.h  filetype.h  memory_producer.h  memory_writer.h  ms_config.h  napl_error.h  napl_facade.h  nil_sink.h  objfact.h  processor_visitor.h  progress.h  reinterpret.h  sample_analyzer.h  samplebl.h  simpops.h  truncator.h  vssver.scc
libs/: CMakeLists.txt
libs/midi/: CMakeLists.txt  midi.sln
libs/midi/midi/: CMakeLists.txt  midi.vcproj  midi_parser.cpp  midi_parser.hpp  subrange_parser.hpp  subrange_parser2_0.hpp  subsection_parser2_0.hpp
libs/mpg123/: libmpg123-0.def  libmpg123-0.lib  mpg123.h
libs/napl/: .cproject  .project  .sconsign.dblite  CMakeLists.txt  SConscript  SConstruct  aiff.cpp  aiff.h  amplifier.h  analyzer.h  constant_producer.h  convendi.h  copy_of_napl.vcproj  delay.h  double_dispatch_factory.cpp  extract_channel.h  filefact.cpp  fourier.h  function_impl.h  ieee754.h  ieee754_.h  lame_wrapper.cpp  lame_wrapper.h  memory_producer.cpp  memory_writer.cpp  mssccprj.scc  napl.dsp  napl.dsw  napl.vcproj  negator.h  objfact.cpp  ol_napl.vcproj  pan_impl.h  processor.h  progress.cpp  raw_file.cpp  raw_file.h  resample.cpp  resample.h  sample_factory_instantiator.h  (+12 more)
libs/napl_builder_lib/: CMakeLists.txt  napl_facade.cpp  stdafx.cpp  stdafx.h
midi_parser/: midi_parser.sln
midiparse/: midifile.cpp  miditest.cpp
synth/: MidiMessages.h  MidiReceiver.cpp  Synth.dsp  midireceiver.h  midiscanner.cpp
(+54 files in other folders)
